Update 프로그래밍 문법과 로직 최종.md

--- a/ABAP 기초/프로그래밍 문법과 로직 최종.md
+++ b/ABAP 기초/프로그래밍 문법과 로직 최종.md
@@ -4683,6 +4683,377 @@ START-OF-SELECTION.
 # 프로그래핑 문법과 로직 (11.27).md
 </br>
 
+## < Data Dictionary: Domain & Data Element >
+- Domain과 Data Element는 `1 : N` 관계
+- 1개의 Domain → 여러 Data Element에서 사용 가능
+</br>
+
+<img width="327" height="152" alt="image" src="https://github.com/user-attachments/assets/3bbba7ad-47a1-4fdf-8719-c13fc4627dbd" />
+
+</br>
+</br>
+</br>
+
+### Domain (도메인)
+- 데이터의 타입과 속성을 정의하는 단위
+  - 데이터 형식, 길이, 소수점, 문자/숫자 구분 등 속성을 정의
+- 숫자 음수 사용 여부 지정 가능 → `Sign` 속성 체크 시 음수 입력 허용
+- 소문자 사용 여부 지정 가능 → `Case` 속성 체크 시 소문자 입력 가능
+  
+<img width="492" height="328" alt="image" src="https://github.com/user-attachments/assets/dfebe42f-4966-4074-84fd-366c8a833528" />
+
+</br>
+</br>
+</br>
+
+### Data Element (데이터 요소)
+- 실제 테이블 필드나 구조 필드에 사용되는 논리적 이름
+- Domain 기반 생성 → Domain에서 정의된 형식을 그대로 사용
+- Domain 선택은 선택 사항
+  - Domain 사용 시: 타입, 길이, 음수 허용 여부, 소문자 허용 여부 등 속성을 한번에 관리 가능
+    - Domain 속성을 수정하면 해당 Domain을 참조하는 모든 Data Element가 자동으로 변경
+  - Domain 미사용 시: Built-in Type으로 직접 타입 지정 가능
+- 도메인 1개를 여러 Data Element에서 재사용 가능
+
+<img width="495" height="269" alt="image" src="https://github.com/user-attachments/assets/abb423ba-3983-4a1d-ad33-ab0b7cb7a437" />
+</br>
+</br>
+</br>
+</br>
+
+- **`text Element -> Selelction Texts -> DDIC Reference` 하면 short description 뜸**
+<img width="491" height="166" alt="image" src="https://github.com/user-attachments/assets/543260b8-6384-469e-a105-b218af963d6e" />
+
+</br>
+</br>
+
+---
+
+</br>
+
+## < Structure Types (스트럭처 타입) >
+### 1) Simple Structure (단순 구조)
+- 일반적으로 사용하는 기본 스트럭처
+- 필드 안에 또 다른 구조나 테이블이 없는 구조
+```abap
+TYPES: BEGIN OF ty_simple,
+         name TYPE string,
+         age  TYPE i,
+       END OF ty_simple.
+```
+</br>
+</br>
+
+
+### 2) Nested Structure (중첩 구조)
+- 어떤 필드 안에 또 다른 스트럭처가 포함된 구조
+- 구조 안에 구조를 넣어 계층적으로 데이터 표현 가능
+```abap
+TYPES: BEGIN OF ty_address,
+         city    TYPE string,
+         zipcode TYPE string,
+       END OF ty_address.
+
+TYPES: BEGIN OF ty_person,
+         name    TYPE string,
+         age     TYPE i,
+         address TYPE ty_address, "스트럭처 안 스트럭처
+       END OF ty_person.
+```
+</br>
+</br>
+
+
+### 3) Deep Structure (딥 구조)
+- 어떤 필드 안에 인터널 테이블 형태의 테이블 타입이 들어간 구조
+- 구조 안에 테이블을 넣어 1:N 관계 데이터를 표현 가능
+```abap
+TYPES: BEGIN OF ty_order_item,
+         item_id TYPE i,
+         qty     TYPE i,
+       END OF ty_order_item.
+
+TYPES: ty_order_items TYPE STANDARD TABLE OF ty_order_item WITH DEFAULT KEY.
+
+TYPES: BEGIN OF ty_order,
+         order_id TYPE i,
+         items    TYPE ty_order_items, "스트럭처 안 테이블
+       END OF ty_order.
+```
+</br>
+</br>
+</br>
+</br>
+
+## < Structure와 INCLUDE 접근 방식 >
+
+<img width="508" height="198" alt="image" src="https://github.com/user-attachments/assets/4686de91-e543-43d7-9c2f-78271a78a0a7" />
+
+### 1) `.INCLUDE` 사용
+- 스트럭처 안에 INCLUDE로 다른 구조체를 포함했을 때
+- INCLUDE 안의 필드는 최상위 구조체 필드처럼 바로 접근 가능
+```abap
+TYPES: BEGIN OF ty_addr,
+         street TYPE string,
+         city   TYPE string,
+       END OF ty_addr.
+
+TYPES: BEGIN OF ty_person,
+         name TYPE string,
+         INCLUDE TYPE ty_addr, "포함
+       END OF ty_person.
+
+DATA person TYPE ty_person.
+
+"접근
+person-street = 'Main Street'.
+person-city   = 'Seoul'.
+```
+</br>
+</br>
+
+### 2) 구조체 필드 이름으로 직접 포함(예: addr)
+- 구조체 안에 필드명으로 다른 구조체를 선언했을 때
+- 접근할 때는 상위 구조체 → 필드 → 하위 필드 형태로 접근
+```abap
+TYPES: BEGIN OF ty_person,
+         name TYPE string,
+         addr TYPE ty_addr,  "필드명으로 포함
+       END OF ty_person.
+
+DATA person TYPE ty_person.
+
+"접근
+person-addr-street = 'Main Street'.
+person-addr-city   = 'Seoul'.
+```
+</br>
+</br>
+</br>
+</br>
+
+## < Line Type으로 설정 가능한 타입 (ABAP Table Type) >
+
+| Line Type 종류                | 설명 |
+|-------------------------------|------|
+| **Data Element**              | 단일 필드(스칼라 타입)를 행 구조로 사용 |
+| **Structure (Structure Type)**| 여러 필드로 이루어진 스트럭처를 행 타입으로 사용 |
+| **Transparent Table**         | 투명 테이블의 한 Row 전체 구조를 행 타입으로 사용 |
+| **Database View**             | 데이터베이스 뷰의 Row 구조를 행 타입으로 사용 |
+| **Projection View**           | Projection View에서 노출된 필드 구조를 행 타입으로 사용 |
+
+</br>
+</br>
+
+---
+
+</br>
+
+## < Type Group(타입 그룹) >
+- 여러 TYPES, CONSTANTS, MACRO(DEFINE) 등을 한 묶음으로 모아놓은 그룹
+- 프로그램에서 사용 시 `TYPE-POOL <이름>` 으로 로드
+- 이름은 최대 5자리
+**1) 타입 그룹 정의 형식(DIC에서 작성)**
+- 타입 그룹 안의 객체 이름 형식: `<타입그룹명>_<오브젝트명>`
+```abap
+TYPE-POOL <타입그룹이름>.       "타입 그룹 선언
+
+TYPES: <타입이름> TYPE <자료형>,     "타입 정의
+       ...  
+
+CONSTANTS: <상수이름> TYPE <자료형> VALUE <값>,   "상수 정의
+           ...  
+```
+</br>
+
+**2) Program 에서 사용 형식** 
+```abap
+TYPE-POOL <타입그룹이름>.          "타입 그룹 불러오기
+
+DATA <변수명> TYPE <타입그룹이름>_<타입이름>.   "타입 그룹의 타입 사용
+```
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+### 실습 1
+- 특정 필드에 대해 중복제거 및 정렬하여 조회하기
+```abap
+DATA: gs_data TYPE SFLIGHT,
+      gt_data LIKE TABLE OF gs_data.
+
+SELECT DISTINCT CARRID, CONNID, CURRENCY FROM SFLIGHT
+  INTO CORRESPONDING FIELDS OF TABLE @gt_data
+  ORDER BY CARRID DESCENDING, CONNID ASCENDING.
+
+LOOP AT gt_data INTO gs_data.
+  WRITE: / gs_data-CARRID, gs_data-CONNID, gs_data-CURRENCY.
+ENDLOOP.
+```
+</br>
+</br>
+
+### 실습 2
+- domain과 data element 실습
+  
+**1) domain 정의**
+
+<img width="328" height="272" alt="image" src="https://github.com/user-attachments/assets/4a1d0680-2f2d-4c0f-92ce-4a0b3cfe5b44" />
+</br>
+</br>
+
+**2) data element 정의**
+
+<img width="457" height="270" alt="image" src="https://github.com/user-attachments/assets/6f183cf8-29d2-4be0-a69f-a1beaaecbce3" />
+</br>
+</br>
+
+**3) program 코드**
+```abap
+PARAMETERS: pa_fname TYPE ZFIRSTNAME03,
+            pa_lname TYPE ZLASTNAME03,
+            pa_activ TYPE ZASSETS03,
+            pa_liabs TYPE ZLIABILITIES03.
+DATA: gv_result TYPE P LENGTH 10 DECIMALS 2.
+
+
+gv_result = pa_activ - pa_liabs.
+WRITE:/ 'FIrst Name: ', pa_fname,
+      / 'Last Name: ', pa_lname,
+      / 'Assets: ', pa_activ,
+      / 'Liabilities: ', pa_liabs,
+      / 'Assets - Liabilities : ', gv_result.
+```
+</br>
+</br>
+
+### 실습 2
+- Nested Structure 실습 ( 스트럭처 ZSSCARR_B03을 스트럭처 ZSSPFLI_B03 안에 포함시키기 )
+
+**1) ZSSCARR_B03 정의**
+
+<img width="556" height="168" alt="image" src="https://github.com/user-attachments/assets/b699b62b-2738-4312-9793-d542f97f5bbd" />
+
+</br>
+</br>
+
+**2)  ZSSPFLI_B03 정의**
+
+<img width="553" height="226" alt="image" src="https://github.com/user-attachments/assets/ed083fa4-379b-49aa-9de4-9e1b36601205" />
+
+</br>
+</br>
+</br>
+
+### 실습 3
+- Structure와 INCLUDE 접근 방식 실습
+```abap
+DATA: gs_person TYPE ZPERSON_B03.
+
+gs_person-phone = '010-8952-0763'.
+gs_person-name-fname = 'Kim'.   " 필드 안에 스트럭처
+gs_person-name-lname = 'yewon'.
+gs_person-street = 'Gangnam'.   " .Include 스트럭처
+gs_person-city = 'Seoul'.
+
+WRITE:/ gs_person-phone,
+      / gs_person-name-fname,
+      / gs_person-name-lname,
+      / gs_person-street,
+      / gs_person-city.
+```
+</br>
+</br>
+
+### 실습 4
+- Deep Structure 실습 ( Structure 안에 Table 구조 )
+```abap
+DATA: ls_person TYPE ZPERSON_B03,
+      ls_phone TYPE LINE OF ZPERSON_B03-PHONE.    " table 타입에서 line of 로 생성했으므로 structure 변수
+" DATA: ls_phone TYPE STR_PHONE과 같음
+" DATA: ls_phone LIKE LINE OF ls_phone-PHONE과 같음
+
+ls_person-fname = 'Hong'.
+ls_person-lname = 'Gildong'.
+ls_person-street = 'Gangnam'.
+ls_person-city = 'Seoul'.
+
+ls_phone-p_type = 'TEL'.
+ls_phone-p_number = '010-1234-5678'.
+APPEND ls_phone TO ls_person-phone. " itab에 1건추가
+
+ls_phone-p_type = 'FAX'.
+ls_phone-p_number = '02-214-3456'.
+APPEND ls_phone TO ls_person-phone.
+
+ls_phone-p_type = 'MOB'.
+ls_phone-p_number = '010-9876-5432'.
+APPEND ls_phone TO ls_person-phone.
+
+WRITE: 'OKOK'.
+```
+</br>
+</br>
+
+### 실습 5
+- Deep Structure 실습 ( 다하고 디버깅으로 확인 )
+```abap
+PARAMETERS: pa_carr TYPE S_CARR_ID.
+
+DATA: gs_scar TYPE SCARR,
+      gt_spfli TYPE ZSSCARR_B03-SPFLIINFO.
+
+SELECT SINGLE * FROM SCARR
+  INTO gs_scar
+  WHERE carrid = pa_carr.
+  
+BREAK-POINT.
+  
+SELECT * FROM SPFLI
+  INTO CORRESPONDING FIELDS OF TABLE gt_spfli
+  WHERE carrid = pa_carr.
+  
+BREAK-POINT.
+```
+</br>
+</br>
+
+### 실습 6
+**1) 타입 그룹 정의 형식(DIC에서 작성)**
+```abap
+TYPE-POOL ZTB03 .
+
+TYPES ztb03_percentage(3) TYPE P DECIMALS 2.
+CONSTANTS ztb03_pi TYPE F VALUE '3.14'.
+```
+</br>
+
+**2) Program 에서 사용 형식** 
+- icon 그림 표 보고 싶을 때는 SE38 -> SHOWICON 쳐서 실행
+- 색상 표 보고싶을 때는 SE38 -> DEMO_LIST_FORMAT_COLOR_1 쳐서 실행
+```abap
+TYPE-POOLS: ZTB03, COL, ICON.
+
+DATA: gv_percent TYPE ztb03_percentage.
+
+WRITE:/ 'BACKGROUND' COLOR COL_BACKGROUND,
+      / 'HEADING' COLOR COL_HEADING,
+      / 'NORMAL' COLOR COL_NORMAL,
+      / 'TOTAL' COLOR COL_TOTAL,
+      / 'KEY' COLOR COL_KEY,
+      / 'POSITIVE' COLOR COL_POSITIVE,
+      / 'NEGATIVE' COLOR COL_NEGATIVE,
+      / 'GROUP' COLOR COL_GROUP.
+
+WRITE:/ '5B' AS ICON,
+        '5C' AS ICON,
+        '5D' AS ICON.
+```
+
 </br>
 </br>
 </br>
