--- a/ABAP 기초/프로그래밍 문법과 로직 최종.md
+++ b/ABAP 기초/프로그래밍 문법과 로직 최종.md
@@ -5062,6 +5062,312 @@ WRITE:/ '5B' AS ICON,
 # 프로그래핑 문법과 로직 (11.28).md
 </br>
 
+## < ABAP 개념 >
+### < 데이터 조회 & 인덱스 >
+**1) Binary Search**
+- 기본키 기준 SELECT 시 자동 적용
+- 데이터를 반씩 나누며 빠르게 찾는 알고리즘
+
+**2) Secondary Index**
+- 기본키 외 다른 필드 조회 시 사용
+- 빠른 조회 가능
+- DB 옵티마이저가 최적 인덱스 자동 선택
+  
+<img width="466" height="168" alt="image" src="https://github.com/user-attachments/assets/c6878a8f-dcb5-4f9c-9c16-373a9e95bd3d" />
+
+</br>
+</br>
+</br>
+</br>
+
+### < Transparent Table >
+- Activate 해야 실제 DB에 동일한 테이블 생성됨 (1:1 매핑).
+- SAP 시스템에서 고유하게 존재(중복 없음).
+- 키 필드 외 나머지 = Non-key(Function) 필드.
+- 테이블의 한 줄 = Record(레코드).
+- 참조 필드
+  - 통화: `CURR` → `CUKY`
+  - 수량: `QUAN` → `UNIT`
+</br>
+</br>
+
+### < Structure vs Transparent Table >
+
+- **Key 필드 일 때** : Initial Value 허용 반드시 체크 (값 없는 키 필드 생성 시 오류 방지)
+- 테이블 정의 시 INCLUDE는 Structure만 추가 가능
+
+| 항목             | Structure                | Transparent Table                     |
+|------------------|---------------------------|----------------------------------------|
+| 데이터 저장      | ❌ 불가                   | ✔ 가능                                 |
+| 키 필드          | ❌ 없음                   | ✔ 있음                                 |
+| ABAP 변수 선언   | Structure로 사용 (공통점) | Structure로 사용 (공통점)                      |
+| INCLUDE          | ✔ 가능                   | ✔ 가능 (단, Structure만 가능)           |
+
+<img width="378" height="368" alt="image" src="https://github.com/user-attachments/assets/aea9a30e-e39f-442d-84c9-9696d18a06ad" />
+
+</br>
+</br>
+
+</br>
+</br>
+
+### < 테이블 유형과 관계 >
+**1) Transparent Table**
+- DB 테이블과 1:1 매핑
+- 일반 업무 데이터 저장
+- SAP에서 가장 많이 사용됨
+
+**2) Cluster Table & Pool Table**
+- 여러 논리 테이블을 하나의 물리 테이블에 묶음 (N:1 관계)
+- 데이터 압축, 저장 공간 절약 목적
+- 단점과 제약 많아 요즘은 거의 사용하지 않음 (특히 HANA 환경에서)
+</br>
+</br>
+
+---
+
+</br>
+
+## < 테이블 정의 시 Technical Settings >
+**1) 필수 항목**
+- Data Class
+  - 데이터 저장 공간(테이블스페이스)을 분류하는 기준
+  - 데이터 성격에 따라 관리 영역이 다름
+    - Master Data : 자주 바뀌지 않는 기본 데이터
+    - Organizational Data : 시스템 초기 설정 데이터
+    - Transaction Data : 자주 변경되는 트랜잭션 데이터
+    - System Data : SAP 내부용 데이터
+- Size Category
+  - 테이블 예상 크기를 분류하는 옵션
+  - 초기 저장 공간(initial extent) 설정 시 활용
+
+
+<img width="403" height="276" alt="image" src="https://github.com/user-attachments/assets/4fa75fab-363a-4e39-8db5-a62ff419eaa2" />
+
+</br>
+</br>
+</br>
+</br>
+    
+**2) 옵션 항목**
+- 로깅(Logging)
+  - SE11에서 설정 가능
+  - BC 팀 권한 필요
+  - 실제 데이터가 변경되어야 로그 기록됨
+- 버퍼링(Buffering)
+  - 메모리에 데이터를 저장해 조회 속도 개선
+  - 테이블 변경 발생 시, 버퍼 내용과 DB를 동기화
+  - 변경 이력 기록 후 자동 갱신
+ 
+
+<img width="416" height="281" alt="image" src="https://github.com/user-attachments/assets/3adf843b-470a-49e6-98e1-b046b8e23562" />
+
+</br>
+</br>
+
+### 버퍼링 종류
+
+<img width="477" height="184" alt="image" src="https://github.com/user-attachments/assets/180075f1-94ad-4d98-8b30-c7a5364b4f7b" />
+
+**1) Full Buffering**
+- 테이블 전체 데이터를 메모리에 저장
+- 소규모 테이블에 적합
+- 대용량 테이블엔 비효율적
+  
+**2) Generic Buffering**
+- Generic Key 단위로 그룹별 데이터 저장
+- 조건에 맞는 데이터 세트 캐싱
+- 최대 Generic Key 개수 = 기본키 수 - 1
+  
+**3) Single-record Buffering**
+- 한 레코드씩 메모리에 저장
+- 저장 공간 효율적
+- 조회 대상이 적을 때 효과적
+
+</br>
+</br>
+
+---
+
+</br>
+
+## < Input Check (Validation Check) >
+- 사용자 입력값이 테이블이나 필드에 저장되기 전에 유효성을 검증하는 기능
+- ABAP에서 흔히 Validation Check라고 함
+</br>
+
+### < 자동 Input Check 4가지 >
+
+**1) 필수값 체크 (Required Field Check)**
+- 입력이 반드시 필요한 필드에 값이 들어왔는지 확인
+</br>
+
+**2) 외래키 체크 (Foreign Key Check)**
+- 참조 테이블에 존재하는 값인지 확인
+- 데이터 무결성 확보
+</br>
+
+**3) Fixed Value 체크**
+- 특정 필드에 정해진 값만 허용
+- 예: `C`, `Y`, `F` 등
+- 데이터 양이 적어 테이블로 관리하기 애매한 값 관리에 적합
+</br>
+
+**4) Type 체크 (Data Type Check)**
+- 필드 타입과 맞는 값인지 확인
+- 예: 숫자형, 날짜형, 문자형 등
+
+</br>
+</br>
+</br>
+
+## < Fixed Value 설정 방법 >
+**1) Fixed Value 설정하기**
+- Fixed Value(고정값)는 ABAP 딕셔너리에서 오직 도메인 객체에서만 설정
+
+<img width="388" height="253" alt="image" src="https://github.com/user-attachments/assets/004af10c-b934-4d2a-969b-a73854784a82" />
+</br>
+</br>
+
+**2) 테이블에서 필드 지정**
+
+<img width="414" height="217" alt="image" src="https://github.com/user-attachments/assets/3c0e5cbe-0155-47c3-92a2-bdb8be8770f4" />
+</br>
+</br>
+
+**3) Utilities -> table contents -> create entries**
+
+<img width="439" height="210" alt="image" src="https://github.com/user-attachments/assets/09b126b8-5099-436c-8df7-519f6418657c" />
+</br>
+</br>
+
+**4) 값 입력**
+
+<img width="285" height="242" alt="image" src="https://github.com/user-attachments/assets/f7268ba1-0770-4723-86eb-37091ae87dc4" />
+
+</br>
+</br>
+</br>
+</br>
+
+## < Fixed Value 파라미터로 불러오기 >
+- 도메인에 정의된 Fixed Value만 입력 가능하도록 하는 파라미터 선언
+```abap
+PARAMETERS <파라미터명> TYPE <데이터요소> VALUE CHECK.
+```
+```abap
+PARAMETERS: pa_c TYPE ZDECLASS_B03 VALUE CHECK,
+            pa_g TYPE ZDEGENDER_B03 VALUE CHECK.
+
+WRITE: pa_c, pa_g.
+```
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+### 실습 1
+- transparent 테이블 안에 .include로 structure 넣기
+  
+**1) `ZEMPLOY03` transparent 테이블**
+
+<img width="520" height="313" alt="image" src="https://github.com/user-attachments/assets/c2cb8eac-dc91-4753-bd59-a510802330fc" />
+
+</br>
+</br>
+
+**2) `ZDEPMENT03` transparent 테이블**
+
+<img width="520" height="261" alt="image" src="https://github.com/user-attachments/assets/4eb458e1-f5ee-4ca8-981d-d4efe4f57edf" />
+
+</br>
+</br>
+
+**3) `ZCHANGE03` structure**
+
+<img width="538" height="176" alt="image" src="https://github.com/user-attachments/assets/2a04564e-ef1f-4c50-8fa0-5f3767857e37" />
+
+</br>
+</br>
+</br>
+</br>
+
+### 실습 2
+- buffering 설정 실습
+
+**1) `ZTPERSON_B03` transparent 테이블**
+
+<img width="516" height="272" alt="image" src="https://github.com/user-attachments/assets/86bb6d05-bef8-474e-93a8-65eeb3749f67" />
+
+</br>
+</br>
+
+**2) buffer 설정**
+
+<img width="399" height="343" alt="image" src="https://github.com/user-attachments/assets/dbcf567f-4e86-4819-9462-d84a76fc926f" />
+</br>
+</br>
+
+**3) allow 설정**
+
+<img width="558" height="205" alt="image" src="https://github.com/user-attachments/assets/c848a315-fa78-4ed6-a885-8d9416be3d4f" />
+
+</br>
+</br>
+</br>
+</br>
+
+### 실습 3
+- Fixed value 실습
+
+**1) `ZEMPLOY03` transparent 테이블**
+
+<img width="560" height="295" alt="image" src="https://github.com/user-attachments/assets/d53c661f-a1e3-4b73-a0f5-c674d7a1e529" />
+
+</br>
+</br>
+
+**2) Fixed Value 설정**
+
+<img width="504" height="388" alt="image" src="https://github.com/user-attachments/assets/ccb103ea-53de-4aeb-b477-61e240fef77b" />
+
+</br>
+</br>
+
+**3) 출력 확인**
+
+<img width="433" height="376" alt="image" src="https://github.com/user-attachments/assets/5bf5c3d4-64d2-4db1-8c2e-7d5bdef3ac49" />
+
+</br>
+</br>
+</br>
+</br>
+
+### 실습 4
+- Fixed value 실습
+
+**1) `ZTPERSON_B03` transparent 테이블**
+
+<img width="565" height="307" alt="image" src="https://github.com/user-attachments/assets/33141aa7-4d2d-4d58-bf01-fb012cde2bc9" />
+
+</br>
+</br>
+
+**2) Fixed Value 설정**
+
+<img width="419" height="294" alt="image" src="https://github.com/user-attachments/assets/51aa0b8c-0257-4d54-b60f-482e5148250f" />
+
+</br>
+</br>
+
+**3) 출력 확인**
+
+<img width="419" height="369" alt="image" src="https://github.com/user-attachments/assets/a953934a-8836-46ce-a57b-14d407abfb18" />
+
+
 </br>
 </br>
 </br>
