Update 프로그래밍 문법과 로직 최종.md

--- a/ABAP 기초/프로그래밍 문법과 로직 최종.md
+++ b/ABAP 기초/프로그래밍 문법과 로직 최종.md
@@ -5376,6 +5376,407 @@ WRITE: pa_c, pa_g.
 # 프로그래핑 문법과 로직 (12.01).md
 </br>
 
+## < 점검 테이블과 값 제한 관리 >
+
+- **외래키 설정 시** : 데이터 입력할 때 '선택 목록'으로 제공됨
+- **상위/기준 엔티티** : 참조되는 테이블 (기본 키를 제공)
+- **하위/종속 엔티티** : 참조하는 테이블 (외래 키를 가짐)
+- 외래키는 하위 필드를 기준으로 결정
+- 외래키(Foreign Key)를 설정할 때는, 참조하는 테이블(체크 테이블)의 기본키 필드 순서와 외래키 필드 순서가 반드시 동일해야 함.
+- 외래키로 연결되는 체크테이블의 필드는 모두 기본키(Primary Key)여야 함.
+
+</br>
+  
+### 1) 체크 테이블 (Check Table)
+- 데이터 점검하는 기준 제공
+- `check field` 를 기준으로 데이터 존재 여부를 확인
+- `countnum` 에 해당하는 값만 생성 가능
+- Check 테이블에 없는 값은 추가 불가 → 에러 발생
+- Check 필드(F>K가 됨)와 countnum의 도메인은 반드시 일치해야 함
+</br>
+
+### 2) 값 테이블 (Value Table)
+- 입력 가능한 값 제한
+- 도메인 기반으로 허용값 정의
+- Value 테이블에 없는 값은 제한 가능
+- Check 테이블과 별개로, 도메인에 맞으면 값 추가 가능
+</br>
+
+### 3) 외래 키 테이블 (Foreign Key Table)
+- 실제 데이터 입력
+- 체크 테이블과 값 테이블 참조
+- 입력 시, 체크 기준과 도메인 일치 여부 확인
+- 대상 필드(data element)가 다르더라도 도메인이 같으면 가능
+</br>
+</br>
+
+### < Cardinality(관계 대응 타입) >
+- 테이블 간의 관계에서 한쪽 엔티티가 다른 엔티티와 맺을 수 있는 데이터 개수를 의미
+  
+**1) 1:1 (One to One)**
+- 한 레코드가 다른 테이블의 정확히 하나의 레코드와만 연결
+
+**2) 1:N (One to Many)**
+- 한 레코드가 다른 테이블의 여러 레코드와 연결 가능 (1 이상)
+
+**3) 1:C**
+- 특정 도메인 기반으로 한 개의 값이 여러 개의 제한 값과 연결되는 상황 (0 or 1)
+
+**4) 1:CN**
+- 1:N과 유사하나, Check Table & Domain 조합을 통한 확장된 다중 매핑을 의미 (0 or 1 or 1 이상)
+
+<img width="495" height="341" alt="image" src="https://github.com/user-attachments/assets/6f5af294-992a-4ae0-904a-e70644e0f31d" />
+
+</br>
+</br>
+</br>
+</br>
+
+### < 외래 키 (Foreign Key) 설정 과정 >
+**1) 도메인에 Value Table 설정**
+
+<img width="431" height="390" alt="image" src="https://github.com/user-attachments/assets/37619d4e-d5f5-49a1-ac7e-0684bfbc6d8b" />
+</br>
+</br>
+
+**2) 외래 키 생성 시도**
+
+<img width="521" height="286" alt="image" src="https://github.com/user-attachments/assets/d21b9e8b-4b81-40c8-af64-83516b7153b1" />
+</br>
+</br>
+
+**3) 외래 키 필드 매핑**
+-	2번째 : 키필드가 아닌거
+-	3번째 : 키필드인 경우
+-	보통은 `1:CN`
+  
+<img width="561" height="411" alt="image" src="https://github.com/user-attachments/assets/b3ebdb70-da38-4a84-80c3-6246b771bd43" />
+
+</br>
+</br>
+
+**4) 외래 키 필드 매핑**
+- 체크 테이블에 데이터 저장
+  
+<img width="579" height="281" alt="image" src="https://github.com/user-attachments/assets/df0be43e-b927-48e0-83c0-2545cffdacd0" />
+</br>
+</br>
+
+**5) 외래 키 테이블 확인**
+- 유효한 값 목록이 자동으로 연결되어 표시
+
+<img width="529" height="331" alt="image" src="https://github.com/user-attachments/assets/d5312dea-d595-40e1-99c4-2cf2a5b82397" />
+</br>
+</br>
+</br>
+</br>
+
+---
+</br>
+
+## < Text Table >
+- 텍스트 테이블(Text Table)은 기존 메인 테이블의 데이터를 언어별로 저장하기 위한 테이블
+- 보통 테이블 이름 끝에 T를 붙임
+  - 예: `ZTGYM_MEMBER_B03T`
+</br>
+
+**필드 구성 규칙**
+- 전체 키 필드 = 메인 테이블의 모든 키 + 언어키(LANGU / SPRAS)
+- 언어 필드는 SPRAS 또는 LANGU 타입 사용
+- 언어 필드는 T002 테이블과 외래키(FK) 연결
+- 메인 테이블과도 외래키(FK) 연결
+- 모든 키 필드는 PK로 설정
+- 텍스트 필드는 일반 필드
+
+<img width="602" height="234" alt="image" src="https://github.com/user-attachments/assets/baa9e85c-5c6c-40c9-a65a-63b2ab9855bb" />
+</br>
+</br>
+
+<img width="543" height="392" alt="image" src="https://github.com/user-attachments/assets/ae7dc2e2-960e-4f88-b356-2a3038a67ec0" />
+</br>
+</br>
+</br>
+</br>
+
+### < text table 예제 코드 >
+
+**1) `ZTDANGER_B03` 테이블 생성**
+
+<img width="556" height="194" alt="image" src="https://github.com/user-attachments/assets/acadcdff-4522-4c78-ac8b-d648542a414c" />
+
+</br>
+</br>
+
+**12) `ZTDANGER_B03T` 테이블 생성**
+
+<img width="508" height="197" alt="image" src="https://github.com/user-attachments/assets/9e8e5d43-51b9-4f25-b830-2d657fba3847" />
+</br>
+</br>
+
+**3) `DANGER_NO` 외래키 설정**
+
+<img width="503" height="363" alt="image" src="https://github.com/user-attachments/assets/22c5cdb6-fbdb-40d3-9d66-a10732c977fd" />
+
+</br>
+</br>
+
+**4) `LANGU` 외래키 설정**
+
+<img width="501" height="360" alt="image" src="https://github.com/user-attachments/assets/4e1a10d1-c32f-488e-8017-183a9e7f4768" />
+
+</br>
+</br>
+
+**5) 결과창**
+- `ZTDANGER_B03T` 결과
+  
+<img width="385" height="198" alt="image" src="https://github.com/user-attachments/assets/b8ff79cf-3438-45fa-8667-9b6c5115c279" />
+
+</br>
+</br>
+
+- `ZTDANGER_B03` 결과 (영어)
+
+<img width="421" height="159" alt="image" src="https://github.com/user-attachments/assets/47f1f564-ccda-4e1c-8ea4-a877c5bebd71" />
+
+</br>
+</br>
+
+- `ZTDANGER_B03` 결과 (한국어)
+  
+<img width="414" height="171" alt="image" src="https://github.com/user-attachments/assets/39a4706c-2b2f-41ca-83a1-3cef0093910f" />
+
+</br>
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+### 실습 1
+
+**1) 체크 테이블 설정**
+
+<img width="569" height="209" alt="image" src="https://github.com/user-attachments/assets/2a742044-d5db-4007-8b81-8cef0ada1289" />
+</br>
+</br>
+
+**2) 체크 테이블에 데이터 저장**
+
+<img width="569" height="244" alt="image" src="https://github.com/user-attachments/assets/ffb61c78-c8e4-43cb-87e0-d7fc6efef355" />
+</br>
+</br>
+
+**3) 외래 키 테이블 설정**
+
+<img width="573" height="217" alt="image" src="https://github.com/user-attachments/assets/5be3324a-b0fe-4239-b9cb-e19fa8598765" />
+</br>
+</br>
+
+**4) CARRIER에 외래 키 생성**
+
+<img width="496" height="364" alt="image" src="https://github.com/user-attachments/assets/aab1a24c-d685-4d8a-8f85-e2d99c97ceef" />
+</br>
+</br>
+
+**5) 외래 키 테이블 결과 확인**
+
+<img width="536" height="262" alt="image" src="https://github.com/user-attachments/assets/e9ddaba3-dc17-4dae-8e7b-ff4f6326c0de" />
+</br>
+</br>
+</br>
+</br>
+
+### 실습 2
+
+**< 문제 >**
+- 클래스 (`CLASS_ID`) : 가장 상위 개념
+- 체육관 (`GYM_ID`) : 클래스에 종속됨
+- 회원 (`MEMBER_ID`) : 체육관에 종속됨
+
+<img width="553" height="504" alt="image" src="https://github.com/user-attachments/assets/f03492b1-6706-40f4-9c08-5cb3103a4126" />
+</br>
+</br>
+
+**1) 상위 `ZTGYMCLASS_B03` 테이블**
+
+<img width="562" height="204" alt="image" src="https://github.com/user-attachments/assets/e6274522-5ad0-4c10-bd96-31c4c7201c18" />
+
+</br>
+</br>
+
+**2) `CLASS_ID`의 data element**
+
+<img width="529" height="327" alt="image" src="https://github.com/user-attachments/assets/73ff5f37-9716-42c6-acd6-f1fddc07f068" />
+
+</br>
+</br>
+
+**3) domain의 value table 설정**
+
+<img width="537" height="570" alt="image" src="https://github.com/user-attachments/assets/7bd274cf-5723-4356-b0ef-efb6824dc255" />
+</br>
+</br>
+
+**4) 하위 `ZTGYM_B03` 테이블**
+
+<img width="555" height="218" alt="image" src="https://github.com/user-attachments/assets/25c5a67f-c1ce-4d35-aaf5-728593e3bae8" />
+</br>
+</br>
+
+**5) `ZTGYM_B03` 테이블 내 외래 키 설정 - `CLASS_ID`**
+
+<img width="552" height="399" alt="image" src="https://github.com/user-attachments/assets/6eb2a140-ef07-4edb-9b53-f73378342cc5" />
+</br>
+</br>
+
+**6) 하위 `ZTGYM_MEMBER_B03` 테이블**
+
+<img width="544" height="208" alt="image" src="https://github.com/user-attachments/assets/a99a91fc-35d3-4e73-b3e4-106a4ce847a2" />
+
+</br>
+</br>
+
+**7) `ZTGYM_MEMBER_B03` 테이블 내 외래 키 설정 - `CLASS_ID`**
+- 복합 외래키 설정 (체크 테이블에서 키로 지정) 
+<img width="527" height="378" alt="image" src="https://github.com/user-attachments/assets/768849e3-5267-475f-99cb-452bc8239826" />
+
+</br>
+</br>
+
+**8) `ZTGYMCLASS_B03` 테이블 결과**
+
+<img width="528" height="175" alt="image" src="https://github.com/user-attachments/assets/883e3326-6d8c-4bfe-95d8-7e05955e1946" />
+
+</br>
+</br>
+
+**9) `ZTGYM_B03` 테이블 결과**
+
+<img width="525" height="275" alt="image" src="https://github.com/user-attachments/assets/d0c35e9b-b29f-4e0f-962b-ae62e6a73003" />
+
+</br>
+</br>
+
+**10) `ZTGYM_MEMBER_B03` 테이블 결과**
+
+<img width="523" height="215" alt="image" src="https://github.com/user-attachments/assets/2d975de8-0075-4051-828b-b781f930814e" />
+
+</br>
+</br>
+</br>
+</br>
+
+### 실습 3
+- text table 실습
+
+**1) `ZTGYM_B03` 테이블**
+
+<img width="555" height="218" alt="image" src="https://github.com/user-attachments/assets/d7e0c6fa-ad4b-4d90-839e-748ab3dfc3c7" />
+</br>
+</br>
+
+**2) `ZTGYM_B03T` 테이블**
+
+<img width="551" height="193" alt="image" src="https://github.com/user-attachments/assets/90d0bd17-f1b0-42b8-be2f-a2cd88c4026f" />
+
+</br>
+</br>
+
+**3) 외래키 설정**
+- `GYM_ID` 설정
+
+<img width="518" height="370" alt="image" src="https://github.com/user-attachments/assets/3bb051fd-7231-4ad3-95a5-40eeb4955bed" />
+</br>
+</br>
+
+- `CLASS_ID` 설정
+  
+<img width="520" height="372" alt="image" src="https://github.com/user-attachments/assets/cbf8e2bd-b3f3-4e0f-8ce7-14cd28608c86" />
+</br>
+</br>
+
+- `LANGU` 설정
+  
+<img width="504" height="360" alt="image" src="https://github.com/user-attachments/assets/751b75b5-1e2f-481b-b4c5-c69bc7df6b67" />
+</br>
+</br>
+
+**4) 결과창**
+- text table 결과
+  
+<img width="447" height="246" alt="image" src="https://github.com/user-attachments/assets/f59cf592-ee05-4967-a43a-5134005031dd" />
+</br>
+</br>
+
+- 다국어 설정 결과
+
+<img width="450" height="176" alt="image" src="https://github.com/user-attachments/assets/033caef2-0588-4b3f-b5a0-ab3b897dace1" />
+</br>
+</br>
+
+<img width="444" height="178" alt="image" src="https://github.com/user-attachments/assets/968aa163-0964-4625-8083-a417909e49ee" />
+
+</br>
+</br>
+</br>
+</br>
+
+### 실습 4
+- text table 실습
+
+**1) `ZTGYM_MEMBER_B03` 테이블**
+
+<img width="534" height="198" alt="image" src="https://github.com/user-attachments/assets/874f4f69-34a0-428f-b6bb-6f2d8084092b" />
+
+</br>
+</br>
+
+**2) `ZTGYM_MEMBERB03T` 테이블**
+
+<img width="535" height="201" alt="image" src="https://github.com/user-attachments/assets/86f3bf82-0aaf-4552-a34a-27364b5c2dfc" />
+
+</br>
+</br>
+
+**3) 외래키 설정**
+- `MEMBER_ID` 설정
+
+<img width="503" height="362" alt="image" src="https://github.com/user-attachments/assets/6d31ebef-556c-4b8c-9c2c-4b52bcb53252" />
+
+</br>
+</br>
+
+- `LANGU` 설정
+  
+<img width="478" height="340" alt="image" src="https://github.com/user-attachments/assets/cafda627-d348-4ed2-917e-d67cdbb3a3af" />
+
+</br>
+</br>
+
+**4) 결과창**
+- text table 결과
+  
+<img width="421" height="220" alt="image" src="https://github.com/user-attachments/assets/dae65fe3-e259-43b1-afe5-9e0a92596677" />
+
+</br>
+</br>
+
+- 다국어 설정 결과
+
+<img width="448" height="133" alt="image" src="https://github.com/user-attachments/assets/3e42c1a5-404e-4b0f-b50f-6c89402b44e6" />
+
+</br>
+</br>
+
+<img width="461" height="146" alt="image" src="https://github.com/user-attachments/assets/7f204199-dae1-4acd-9114-1c3387e10844" />
+
+</br>
+</br>
+
 </br>
 </br>
 </br>
