--- a/ABAP 기초/프로그래밍 문법과 로직 최종.md
+++ b/ABAP 기초/프로그래밍 문법과 로직 최종.md
@@ -5785,6 +5785,463 @@ WRITE: pa_c, pa_g.
 # 프로그래핑 문법과 로직 (12.02).md
 </br>
 
+## 테이블 필드 데이터형을 수정하고 싶을 때 
+</br>
+
+**1) Url을 char 1로 바꾸기**
+
+<img width="654" height="240" alt="image" src="https://github.com/user-attachments/assets/12913734-892b-47f5-bd30-663cb1987814" />
+</br>
+</br>
+
+**2) `Utilities -> Database object -> Database Utility` 선택**
+
+<img width="584" height="360" alt="image" src="https://github.com/user-attachments/assets/80b5e021-23b0-43b6-8b87-f13f9c2641c8" />
+
+</br>
+</br>
+
+**3) `Activate and adjust database` 선택**
+
+<img width="553" height="425" alt="image" src="https://github.com/user-attachments/assets/4e738638-1168-4bf1-aa2d-e843c44cb12f" />
+</br>
+</br>
+</br>
+
+---
+</br>
+
+## Append Structure
+- 테이블에 새 필드를 추가할 때 쓰는 ‘확장 전용 구조’
+- 1개의 Append Structure → 1개의 테이블에만 적용 가능
+- 1개의 테이블 → 여러 개 Append Structure 가능
+</br>
+
+- `APPEND` = 테이블 확장용(필드 추가), 한 테이블 전용.
+- `INCLUDE` = 구조 재사용용(구조 끼워넣기), 여러 테이블에서 사용.
+- 프로그램에서는 둘 다 그냥 필드처럼 동일하게 접근 가능.
+</br>
+
+**1) `Extras -> Enhancement Category` 클릭**
+
+<img width="497" height="364" alt="image" src="https://github.com/user-attachments/assets/ba6750d8-ae3d-40d2-b733-fc8ac37f79cb" />
+</br>
+</br>
+
+**2) 해당 버튼 클릭**
+
+<img width="674" height="224" alt="image" src="https://github.com/user-attachments/assets/fdb08d5d-5e4e-458a-bb00-c52177610248" />
+</br>
+</br>
+
+**3) `Append Structure` 생성**
+
+<img width="602" height="276" alt="image" src="https://github.com/user-attachments/assets/167e5254-6c8a-4d91-9cc5-0d34abfb3b0e" />
+
+</br>
+</br>
+
+**4) Append Structure 필드 정의**
+- 충돌 방지로 필드 이름은 `ZZ YY` 로 시작
+<img width="602" height="250" alt="image" src="https://github.com/user-attachments/assets/57701f4f-8450-411a-891f-6aedfa9d0d20" />
+
+</br>
+</br>
+
+**5) `.append` 필드 추가**
+
+<img width="673" height="270" alt="image" src="https://github.com/user-attachments/assets/42f98f40-1ea1-4b96-9bfd-0b02a6a1fc3b" />
+
+</br>
+</br>
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+# < Table Join 방법 >
+- JOIN은 DB 직접 접근(버퍼 X), DB View는 버퍼 사용(버퍼 O)
+</br>
+
+## 1) DDIC(Database) View를 활용
+- DB 레벨에서 여러 테이블을 미리 조인하여 가상 테이블(View) 생성
+- 재사용 가능, SQL 최적화, 코드 간결
+- 조건 변경에는 유연하지 않음
+
+```abap
+SELECT <필드1> <필드2> ...
+  FROM <DatabaseView>
+  WHERE <조건>.
+```
+```
+SELECT carrid connid carrname      
+  FROM zabc        " zabc는 이미 여러 테이블을 조인해 만든 Database View
+  WHERE carrid = 'LH'.
+```
+</br>
+</br>
+</br>
+
+### 1-1) Database View
+- 여러 테이블 조인 가능
+- WHERE 절 설정 가능 (Selection Condition)
+- JOIN 종류: 무조건 `INNER JOIN`
+- ABAP 프로그램에서 TYPE과 SELECT 모두 사용 가능
+</br>
+</br>
+
+**예제 1**
+- `Table/Join Conditions` 에서 IN 조건에 넣을 필드와 테이블 선택
+
+<img width="495" height="234" alt="image" src="https://github.com/user-attachments/assets/5db6f42c-bdab-4ec5-bb9b-10ea1c18cdc6" />
+
+</br>
+</br>
+
+- `View Fields` 에서 `Table fields` 눌러서 출력할 필드 선택
+
+<img width="494" height="238" alt="image" src="https://github.com/user-attachments/assets/74c7d487-5ea1-4f47-801a-1b8e3f3b9fa0" />
+
+</br>
+</br>
+
+- `Selection Conditions` 에서 where 조건 달기
+- operator(EQ, NQ) 와 AND/OR 조건 달기
+
+<img width="494" height="146" alt="image" src="https://github.com/user-attachments/assets/174e9455-6f28-4f5a-8ed5-fed56f11bd6f" />
+
+
+</br>
+</br>
+</br>
+</br>
+</br>
+
+**예제 2**
+- `Table/Join Conditions` 에서 `Relationships` 눌러서 출력할 테이블 선택
+
+<img width="498" height="292" alt="image" src="https://github.com/user-attachments/assets/2322d3fe-31f2-4096-b1de-fe1ea0382ae2" />
+
+</br>
+</br>
+
+<img width="485" height="358" alt="image" src="https://github.com/user-attachments/assets/32ead43f-85cb-4bc0-b492-0664b9c5b5fe" />
+
+</br>
+</br>
+
+- `View Fields` 에서 `Table fields` 눌러서 출력할 필드 선택
+
+<img width="489" height="296" alt="image" src="https://github.com/user-attachments/assets/d2e884ab-e5b1-4342-ab4f-e345dfacc6b9" />
+
+</br>
+</br>
+
+<img width="547" height="194" alt="image" src="https://github.com/user-attachments/assets/2846f5ba-bd2f-40fb-bbc0-30a860f7e13b" />
+
+</br>
+</br>
+
+- `Selection Conditions` 에서 where 조건 달기
+- operator(EQ, NQ) 와 AND/OR 조건 달기
+
+<img width="488" height="173" alt="image" src="https://github.com/user-attachments/assets/449f2abb-705c-427b-a2b6-6d7e5f291384" />
+
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+
+**예제 3**
+- `Table/Join Conditions` 에서 `Relationships` 눌러서 출력할 테이블 선택
+
+<img width="509" height="183" alt="image" src="https://github.com/user-attachments/assets/12d9f3e0-6209-4e93-b3b5-39ac47dd2b39" />
+
+</br>
+</br>
+
+- `View Fields` 에서 `Table fields` 눌러서 출력할 필드 선택
+- `*` : 테이블의 모든 필드 자동 포함
+- `- 필드명` : 특정 필드만 제외
+
+<img width="579" height="224" alt="image" src="https://github.com/user-attachments/assets/c313c351-59dc-416b-849a-0a885c1c1a0c" />
+
+</br>
+</br>
+
+- `Selection Conditions` 에서 where 조건 달기
+- operator(EQ, NQ) 와 AND/OR 조건 달기
+
+<img width="488" height="173" alt="image" src="https://github.com/user-attachments/assets/449f2abb-705c-427b-a2b6-6d7e5f291384" />
+
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+
+
+### 1-2) Projection View
+- 하나의 테이블에서 특정 필드만 추출 → Projection
+- JOIN 없음
+- ABAP 프로그램에서 TYPE/SELECT 모두 사용 가능
+</br>
+</br>
+
+**예제**
+- `SE11`에서 view 선택 후 생성
+  
+<img width="423" height="283" alt="image" src="https://github.com/user-attachments/assets/eaed92d0-3775-457e-bd89-ed2df2e600b6" />
+</br>
+</br>
+
+<img width="311" height="240" alt="image" src="https://github.com/user-attachments/assets/b93f7a4d-85e3-4bd0-ae65-67242bc1c841" />
+</br>
+</br>
+
+- 출력할 필드 선택
+<img width="491" height="229" alt="image" src="https://github.com/user-attachments/assets/db775d5b-607c-4cf4-8629-d75f18a5e721" />
+
+</br>
+</br>
+</br>
+</br>
+
+ ### 1-3) Maintenance View (SE54, SE30)
+- 여러 테이블을 묶어서 한 화면에서 CRUD 가능
+- JOIN 방식: 무조건 `LEFT OUTER JOIN`
+- ABAP 프로그램에서 SELECT 불가 (테이블 유지 용도)
+
+</br>
+</br>
+
+**예제 1**
+- `Maint.Status` 에서 Access 조건 선택
+  
+<img width="629" height="388" alt="image" src="https://github.com/user-attachments/assets/ca869525-3a12-4602-8685-0999e7ba9df8" />
+
+</br>
+</br>
+
+- `Table/Join Conditions` 에서 출력할 테이블 선택
+
+<img width="622" height="478" alt="image" src="https://github.com/user-attachments/assets/3b6efd3c-96b9-4d42-a626-84130e0a2341" />
+
+</br>
+</br>
+
+- `View Fields` 에서 `Table fields` 눌러서 출력할 필드 선택
+
+<img width="627" height="303" alt="image" src="https://github.com/user-attachments/assets/14a29c38-fcf1-4dd7-ac9f-719f3517b048" />
+
+</br>
+</br>
+
+- `utilities -> table maintenance generator` 선택
+  
+<img width="623" height="383" alt="image" src="https://github.com/user-attachments/assets/d2289232-5df1-44ff-9e29-cfe8d621d0a9" />
+
+</br>
+</br>
+
+- dialog 작성
+ 
+<img width="646" height="438" alt="image" src="https://github.com/user-attachments/assets/9c6fdc38-a1b6-4f9d-8ac0-3bb45e9c2f11" />
+</br>
+</br>
+
+- function group 생성 후 active까지 하기 (그룹 마우스 우클릭)
+<img width="306" height="305" alt="image" src="https://github.com/user-attachments/assets/09948041-9902-4a30-80b3-0f38ef9c3f02" />
+</br>
+</br>
+
+- 결과 확인 (조회, 수정, 삭제 CRUD 기능 가능)
+<img width="643" height="403" alt="image" src="https://github.com/user-attachments/assets/f279ac8f-5eaa-42ba-8319-ef322e111fa0" />
+</br>
+</br>
+
+- `two step` 일 경우 더블클릭 시 수정 가능
+  
+<img width="619" height="254" alt="image" src="https://github.com/user-attachments/assets/f783e467-1560-4c1f-94da-1d26c3a9af83" />
+
+</br>
+</br>
+
+<img width="413" height="303" alt="image" src="https://github.com/user-attachments/assets/34bc5a63-0c97-4020-b73d-0f598210cc2d" />
+
+</br>
+</br>
+</br>
+</br>
+</br>
+
+**예제 2**
+- `Table/Join Conditions` 에서 출력할 테이블 선택
+
+<img width="598" height="382" alt="image" src="https://github.com/user-attachments/assets/0cd634b1-f761-47b3-ae51-3aae0193e05e" />
+
+</br>
+</br>
+
+- `View Fields` 에서 `Table fields` 눌러서 출력할 필드 선택
+
+<img width="650" height="256" alt="image" src="https://github.com/user-attachments/assets/0b209476-4a8f-497f-a497-22aff6022cd0" />
+
+</br>
+</br>
+
+- `utilities -> table maintenance generator` 선택 (dialog 작성)
+  
+<img width="650" height="472" alt="image" src="https://github.com/user-attachments/assets/db6ee4f1-d457-45c1-a442-f77213e8097c" />
+</br>
+</br>
+
+- function group 생성 후 active까지 하기 (그룹 마우스 우클릭)
+  
+<img width="374" height="355" alt="image" src="https://github.com/user-attachments/assets/fc9e1ec2-e0ce-4bf8-b017-33a00ad4702c" />
+</br>
+</br>
+
+- `one step` 일 경우 더블클릭해도 수정 불가능
+
+<img width="517" height="260" alt="image" src="https://github.com/user-attachments/assets/2cf9e82f-965d-4c0c-adae-b424efc9d456" />
+</br>
+</br>
+
+- `SM30`으로 이동 후 수정, 조회, 삭제 등 가능
+  
+<img width="507" height="336" alt="image" src="https://github.com/user-attachments/assets/164eb900-f1bd-4fcd-ab90-d43c83dabd2e" />
+
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+
+### 1-4) Help View
+- Search Help(F4 도움창)에서만 사용
+- JOIN 방식: 무조건 LEFT OUTER JOIN
+- 프로그램에서 SELECT로 사용 불가
+</br>
+</br>
+</br>
+</br>
+</br>
+
+## 2) 프로그램에서 직접 조인
+- ABAP 프로그램 안에서 SELECT문에서 직접 JOIN 수행
+- 조건을 동적으로 처리 가능, 유연성 높음
+- 코드 길어지고, DB 최적화는 View보다 어려움
+</br>
+
+- `INNER JOIN` : 두 테이블 모두에 있는 데이터만 반환 (교집합)
+- `LEFT OUTER JOIN` : 왼쪽 테이블 기준, 오른쪽 테이블 없으면 NULL 포함
+</br>
+
+- `-` : 필드 접근용 (JOIN 에서만 안씀)
+- `~` : JOIN 사용 시에만 사용
+```abap
+SELECT <테이블1~필드>, <테이블2~필드>
+  INTO TABLE <내테이블>
+  FROM <테이블1>
+  INNER JOIN <테이블2>
+  ON <테이블1~키> = <테이블2~키>
+  WHERE <조건>.
+```
+- `INNER JOIN` 예제
+```abap
+SELECT SCARR~CARRID
+       SPFLI~CONNID
+       SCARR~CARRNAME
+       SPFLI~CITYFROM
+  INTO TABLE lt_flight
+  FROM SCARR as A INNER JOIN SPFLI as B
+    ON SCARR~CARRID = SPFLI~CARRID      " spfli와 scarr 모두 존재하는 carrid만 결과에 포함
+  WHERE SCARR~CARRID = 'AA'.
+
+  IF sy-subrc = 0.
+    cl_demo_output=>display( lt_flight ).
+  ENDIF.
+```
+- `LEFT OUTER JOIN` 예제
+```abap
+DATA: BEGIN OF ls_flight,
+        carrid   TYPE s_carr_id,
+        connid   TYPE s_conn_id,
+        carrname TYPE s_carrname,
+        cityfrom TYPE s_from_cit,
+      END OF ls_flight.
+DATA: lt_flight LIKE TABLE OF ls_flight.
+
+SELECT A~carrid B~connid A~carrname B~cityfrom
+  INTO TABLE lt_flight
+  FROM scarr AS A LEFT OUTER JOIN spfli AS B
+    ON A~carrid = B~carrid
+  WHERE A~carrid BETWEEN 'NG' AND 'UA'.
+
+SORT lt_flight BY carrid.
+
+IF sy-subrc = 0.
+  LOOP AT lt_flight INTO ls_flight.
+    WRITE:/ ls_flight-carrid,
+            ls_flight-connid,
+            ls_flight-carrname,
+            ls_flight-cityfrom.
+  ENDLOOP.
+ENDIF.
+```
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+### 실습 1
+- `Table/Join Conditions` 에서 `Relationships` 눌러서 출력할 테이블 선택
+
+<img width="616" height="372" alt="image" src="https://github.com/user-attachments/assets/276f20de-44f0-4b98-bee8-37d380c11332" />
+
+</br>
+</br>
+
+- `View Fields` 에서 `Table fields` 눌러서 출력할 필드 선택
+
+<img width="617" height="327" alt="image" src="https://github.com/user-attachments/assets/f771c3a7-a19b-4f8b-835c-d7c4dce0414f" />
+
+</br>
+</br>
+
+- `Maint.Status` 에서 Access 조건 선택
+  
+<img width="625" height="402" alt="image" src="https://github.com/user-attachments/assets/77cb2dee-b1ab-4d08-b890-6fbeb04b4e1c" />
+</br>
+</br>
+
+- dialog 작성
+ 
+<img width="606" height="479" alt="image" src="https://github.com/user-attachments/assets/c20175d4-0783-4589-a442-07fee6f2f0ac" />
+</br>
+</br>
+
+- function group 생성 후 active까지 하기 (그룹 마우스 우클릭)
+<img width="304" height="292" alt="image" src="https://github.com/user-attachments/assets/6aa54123-32c2-49d9-8a6c-01a1a2670f15" />
+
+</br>
+</br>
+</br>
+</br>
+</br>
+
 </br>
 </br>
 </br>
