Update 프로그래핑 문법과 로직 (11.20).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.20).md
@@ -122,6 +122,7 @@ MOVE-CORRESPONDING gs_flight TO gs_b_flight.
 **1) CONCATENATE**
 - 여러 문자열을 하나로 이어 붙임
 - `SEPARATED BY` → 문자열 사이에 넣을 구분자(공백, 콤마 등)
+- `respecting blanks` 추가하면 빈칸 허용
 ```abap
 CONCATENATE <문자1> <문자2> <문자3> ... INTO <결과변수>
              [SEPARATED BY <구분자>].
