Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -1,2 +1,3 @@
-![Uploading image.png…]()
+<img width="504" height="383" alt="image" src="https://github.com/user-attachments/assets/64bcc6b9-0cb3-44b2-aef7-8cc2ae541c08" />
+
 
