--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -1,4 +1,3 @@
-- 프로그램 생성 후 프로그램에 스크린 생성
-</br>
+**1) 프로그램 생성 후 프로그램에 스크린 생성**
 
 <img width="421" height="320" alt="image" src="https://github.com/user-attachments/assets/c82fc429-0d39-45b3-8a72-3b8d9cd00985" />
