--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -1,3 +1,8 @@
 **1) 프로그램 생성 후 프로그램에 스크린 생성**
 
 <img width="421" height="320" alt="image" src="https://github.com/user-attachments/assets/c82fc429-0d39-45b3-8a72-3b8d9cd00985" />
+</br>
+
+**2) 스크린 dynpro 지정**
+
+<img width="502" height="328" alt="image" src="https://github.com/user-attachments/assets/5a56ec4e-dc72-42b1-99b2-8575e140fd68" />
