Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -10,4 +10,12 @@
 
 **2) 스크린 dynpro 지정**
 
-<img width="539" height="353" alt="image" src="https://github.com/user-attachments/assets/88079e5b-eca8-4275-8876-27ce5abff187" />
+<img width="565" height="369" alt="image" src="https://github.com/user-attachments/assets/580bf983-2d39-4cb6-ac75-542825de91de" />
+</br>
+</br>
+
+**3) 스크린에서 Layout 클릭**
+
+<img width="579" height="384" alt="image" src="https://github.com/user-attachments/assets/46bde9cf-13e3-4905-8626-b105ad58e8df" />
+</br>
+</br>
