Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -19,3 +19,7 @@
 <img width="579" height="384" alt="image" src="https://github.com/user-attachments/assets/46bde9cf-13e3-4905-8626-b105ad58e8df" />
 </br>
 </br>
+
+**3) 스크린창에서 name과 text 지정**
+
+<img width="676" height="344" alt="image" src="https://github.com/user-attachments/assets/2df2ff1b-d20f-486e-b9c9-3f61f9c85563" />
