--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -20,6 +20,13 @@
 </br>
 </br>
 
-**3) 스크린창에서 name과 text 지정**
+**4) 스크린창에서 name과 text 지정**
 
 <img width="676" height="344" alt="image" src="https://github.com/user-attachments/assets/2df2ff1b-d20f-486e-b9c9-3f61f9c85563" />
+</br>
+</br>
+
+**5) TCODE 생성 - program에 생성**
+
+<img width="528" height="359" alt="image" src="https://github.com/user-attachments/assets/8328e9ba-17f2-4a73-a936-ff6ac3fff6f1" />
+
