Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -29,4 +29,22 @@
 **5) TCODE 생성 - program에 생성**
 
 <img width="528" height="359" alt="image" src="https://github.com/user-attachments/assets/8328e9ba-17f2-4a73-a936-ff6ac3fff6f1" />
+</br>
+</br>
+
+**6) TCODE 생성 - program and dynpro 체크**
+
+<img width="586" height="372" alt="image" src="https://github.com/user-attachments/assets/0e69a724-19d3-4d59-8a57-abf9efe4bb7f" />
+</br>
+</br>
+
+**7) TCODE 생성 - screen number 고려해서 생성**
+
+<img width="666" height="479" alt="image" src="https://github.com/user-attachments/assets/183f593f-76ad-405b-97ec-678ba51c9963" />
+</br>
+</br>
+
+**8) TCODE 생성 -  TCODE 입력시 창 열림**
+
+<img width="457" height="356" alt="image" src="https://github.com/user-attachments/assets/c2e333bf-fdfb-490d-bec8-debee1ad11e8" />
 
