Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -2,6 +2,16 @@
 
 ### < 프로그램 타입 >
 
+**1) Type 1 – Executable Program (Report Program)**
+- 바로 실행 가능한 일반 프로그램
+- SE38/SE80에서 바로 Run 가능
+
+**2) Type M – Module Pool Program**
+- 스크린 기반 프로그램
+- 단독 실행 불가 → 반드시 `T-code` 필요
+- 프로그램명: `SAPMZ` , `SAPMY` 로 시작
+- 생성 방식은 일반 프로그램과 비슷
+- 단, `Top Include` 체크 후 생성
 
 </br>
 </br>
