--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -17,11 +17,19 @@
 </br>
 </br>
 
+
+</br>
+</br>
+
 ---
 
 </br>
 
-## module pool program 생성 방법
+## module pool program 생성
+- Module Pool Include 구조
+  - I01 : Input 관련 로직
+  - O01 : Output 관련 로직
+  - F01 : Function·기능 로직
 </br>
 
 **1) 프로그램 생성 후 프로그램에 스크린 생성**
