Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -76,7 +76,7 @@
 </br>
 
 **8) TCODE 생성 -  TCODE 입력시 창 열림**
-- /OZTCODESCREENB03 입력시 이 창이 띄워짐
+- `/OZTCODESCREENB03` 입력시 이 창이 띄워짐
 -	위 버튼 비활성화 -> 스크린마다 다르게 버튼 설정 가능
 <img width="350" height="231" alt="image" src="https://github.com/user-attachments/assets/b71ee012-d91c-4c6a-8aec-cc81d15065f2" />
 
