Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -17,6 +17,19 @@
 </br>
 </br>
 
+### < 스크린 동작 흐름 >
+**1) PBO (Process Before Output)**
+- 스크린 출력 전에 실행되는 로직
+- 100번 스크린이 뜨기 전에 필요한 초기 세팅을 여기서 처리
+</br>
+
+**2) PAI (Process After Input)**
+- 스크린 표시 후, 사용자가 입력 → 이벤트 발생 후 실행
+- 버튼 클릭, 엔터 입력 후 로직 처리
+
+</br>
+</br>
+
 
 </br>
 </br>
