--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -6,7 +6,6 @@
 - 바로 실행 가능한 일반 프로그램
 - SE38/SE80에서 바로 Run 가능
 
-
 **2) Type M – Module Pool Program**
 - 스크린 기반 프로그램
 - 단독 실행 불가 → 반드시 `T-code` 필요
@@ -22,7 +21,6 @@
 - 스크린 출력 전에 실행되는 로직
 - 100번 스크린이 뜨기 전에 필요한 초기 세팅을 여기서 처리
 
-
 **2) PAI (Process After Input)**
 - 스크린 표시 후, 사용자가 입력 → 이벤트 발생 후 실행
 - 버튼 클릭, 엔터 입력 후 로직 처리
@@ -30,6 +28,11 @@
 </br>
 </br>
 
+### < 스크린 속성(Screen Attributes) >
+- `Normal(View)` : 일반 화면
+- `Subscreen` : 화면 내 포함되는 하위 화면 (fragment 느낌)
+- `Modal Dialog Box` : 팝업 형태
+- `Selection Screen` : 선택 화면
 
 </br>
 </br>
@@ -44,6 +47,10 @@
   - `I01` : Input 관련 로직
   - `O01` : Output 관련 로직
   - `F01` : Function·기능 로직
+- `Next Screen` : 다음에 어떤 화면을 띄울지 결정
+  - `next dynpro = 0` 은 빈값과 같음
+  - 현재 화면 처리 후 자동으로 ‘뒤로가기(back)’ (엔터 치면 뒤로 가는 동작이 발생)
+- 9000번 이상은 사용 금지 (CBO 영역이므로 충돌 위험)
 </br>
 
 **1) 프로그램 생성 후 프로그램에 스크린 생성**
