Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -51,7 +51,7 @@
 - `Next Screen` : 다음에 어떤 화면을 띄울지 결정
   
   - `next dynpro = 0` 은 빈값과 같음
-  - 현재 화면 처리 후 자동으로 ‘뒤로가기(back)’ (엔터 치면 뒤로 가는 동작이 발생)
+  - 현재 화면 처리 후 자동으로 ‘뒤로가기(back)’
 - 9000번 이상은 사용 금지 (CBO 영역이므로 충돌 위험)
 </br>
 </br>
@@ -65,6 +65,12 @@
 **2) 스크린 dynpro 지정**
 
 <img width="565" height="369" alt="image" src="https://github.com/user-attachments/assets/580bf983-2d39-4cb6-ac75-542825de91de" />
+</br>
+</br>
+
+- 엔터 치면 뒤로가기 설정하고 싶으면 `next dynpro = 0`
+<img width="564" height="433" alt="image" src="https://github.com/user-attachments/assets/4896f30e-0df5-49f3-887d-ee1c110f13c6" />
+
 </br>
 </br>
 
