Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -25,6 +25,8 @@
 - 스크린 표시 후, 사용자가 입력 → 이벤트 발생 후 실행
 - 버튼 클릭, 엔터 입력 후 로직 처리
 
+<img width="464" height="319" alt="image" src="https://github.com/user-attachments/assets/7652d97a-c07c-4772-a476-bd09e6538d14" />
+
 </br>
 </br>
 
