Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -116,4 +116,20 @@
 -	위 버튼 비활성화 -> 스크린마다 다르게 버튼 설정 가능
 <img width="350" height="231" alt="image" src="https://github.com/user-attachments/assets/b71ee012-d91c-4c6a-8aec-cc81d15065f2" />
 
+</br>
+</br>
+
+### < 추가적인 Module Pool 기능 >
+</br>
+
+**1) 스크린 파일 열기** 
+
+<img width="435" height="204" alt="image" src="https://github.com/user-attachments/assets/3dcc5695-3756-4fce-8e9c-777fa1901393" />
+</br>
+</br>
+
+**2) `PF_STATUS` 랑 `TITLEBAR` 생성** 
+
+<img width="535" height="160" alt="image" src="https://github.com/user-attachments/assets/9c8dcf08-e15f-4219-8499-b6f4c5c639f6" />
+
 
