Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -130,6 +130,13 @@
 </br>
 </br>
 
+**2) 모듈 `STATUS_0100` 와 `USER_COMMAND_0100` 생성** 
+
+<img width="596" height="262" alt="image" src="https://github.com/user-attachments/assets/ecbde80e-6778-4eac-8640-8e83d30bf762" />
+
+</br>
+</br>
+
 **2) `PF_STATUS` 랑 `TITLEBAR` 생성** 
 
 <img width="581" height="174" alt="image" src="https://github.com/user-attachments/assets/158e8a48-0af7-4715-8e9a-9f2df9504033" />
