Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -137,7 +137,11 @@
 </br>
 </br>
 
-**2) `PF_STATUS` 랑 `TITLEBAR` 생성** 
+**2) `STATUS_0100` 안에 있는 `PF_STATUS` 랑 `TITLEBAR` 생성** 
+
+<img width="533" height="340" alt="image" src="https://github.com/user-attachments/assets/40317b12-abbb-4701-b894-4cd8a61fa110" />
+</br>
+</br>
 
 <img width="581" height="174" alt="image" src="https://github.com/user-attachments/assets/158e8a48-0af7-4715-8e9a-9f2df9504033" />
 
