Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -137,7 +137,7 @@
 </br>
 </br>
 
-**2) `STATUS_0100` 안에 있는 `PF_STATUS` 랑 `TITLEBAR` 생성** 
+**3) `STATUS_0100` 안에 있는 `PF_STATUS` 랑 `TITLEBAR` 생성** 
 
 <img width="581" height="174" alt="image" src="https://github.com/user-attachments/assets/158e8a48-0af7-4715-8e9a-9f2df9504033" />
 </br>
@@ -152,3 +152,9 @@
 </br>
 
 <img width="573" height="142" alt="image" src="https://github.com/user-attachments/assets/610331b4-9625-4f1f-b72a-5f5ce51714b7" />
+</br>
+</br>
+
+**4) 타이틀이 바뀐 것을 확인** 
+
+<img width="412" height="258" alt="image" src="https://github.com/user-attachments/assets/5c6d40c9-47a5-495a-905f-21c4648690c4" />
