Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -1,6 +1,7 @@
 ## ABAP 개념
 
 ### < 프로그램 타입 >
+- 둘 다 DB CRUD 작업 가능
 
 **1) Type 1 – Executable Program (Report Program)**
 - 바로 실행 가능한 일반 프로그램
@@ -123,7 +124,7 @@
 </br>
 </br>
 
-### < 추가적인 Module Pool 기능 >
+### < 스크린 파일 내 PBO, PAI 모듈 생성 >
 </br>
 
 **1) 스크린 파일 열기** 
@@ -160,3 +161,23 @@
 **4) 타이틀이 바뀐 것을 확인** 
 
 <img width="412" height="258" alt="image" src="https://github.com/user-attachments/assets/5c6d40c9-47a5-495a-905f-21c4648690c4" />
+</br>
+</br>
+</br>
+</br>
+
+### < 스크린 Layout 기능 >
+</br>
+
+**1) 스크린의 Layout에서 다양하게 구성 가능**
+
+<img width="518" height="416" alt="image" src="https://github.com/user-attachments/assets/baa5878e-248a-444e-9cb1-ca9ec07970b9" />
+</br>
+</br>
+
+**2) TCODE 검색으로 결과 확인 가능**
+<img width="523" height="389" alt="image" src="https://github.com/user-attachments/assets/7c53ec59-3f18-4c93-bf25-29b9079eb865" />
+</br>
+</br>
+</br>
+</br>
