Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -196,3 +196,11 @@
 </br>
 
 ### < OK-CODE란? >
+- 스크린과 프로그램 간에 사용자 명령(Function Code)을 주고받는 필드
+- 시스템 변수 `sy-ucomm`
+  
+  - OK-CODE 값이 실제 저장되는 시스템 필드
+    
+    - 사용자가 버튼/엔터 입력 → OK-CODE 생성
+    - 이 값이 `sy-ucomm` 에 들어옴
+    - PAI에서 `CASE sy-ucomm` 으로 분기 처리
