--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -204,15 +204,15 @@
 
 </br>
 
-## < OK-CODE 및 ABAP 변수와 스크린 필드의 연결 >
+## < ABAP ↔ 스크린 코드 예제 >
 </br>
 
-### < OK-CODE란? >
-- 스크린과 프로그램 간에 사용자 명령(Function Code)을 주고받는 필드
-- 시스템 변수 `sy-ucomm`
-  
-  - OK-CODE 값이 실제 저장되는 시스템 필드
-    
-    - 사용자가 버튼/엔터 입력 → OK-CODE 생성
-    - 이 값이 `sy-ucomm` 에 들어옴
-    - PAI에서 `CASE sy-ucomm` 으로 분기 처리
+
+</br>
+</br>
+
+---
+
+</br>
+
+### < 실습 코드 >
