Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -207,6 +207,12 @@
 ## < ABAP ↔ 스크린 코드 예제 >
 </br>
 
+### < DB 테이블에서 입력값 가져오기 >
+</br>
+
+**1) 상단 두번째 그림 클릭 시 DB 테이블 목록을 선택 가능**
+
+<img width="474" height="206" alt="image" src="https://github.com/user-attachments/assets/39ef0a75-d2c5-42e6-8830-659d879ec19a" />
 
 </br>
 </br>
@@ -215,4 +221,4 @@
 
 </br>
 
-### < 실습 코드 >
+## < 실습 코드 >
