Update 프로그래밍 전용 웹 스크린 개발(12.11).md4

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -217,6 +217,45 @@
 </br>
 </br>
 
+**2) 테이블명 입력 후 get from dictionary 클릭**
+
+<img width="559" height="113" alt="image" src="https://github.com/user-attachments/assets/0ee1f644-3b66-4474-955a-73b4fcfc21ec" />
+
+</br>
+</br>
+
+**3) 화면에 출력하고 싶은 필드 선택**
+
+<img width="480" height="336" alt="image" src="https://github.com/user-attachments/assets/19e72e7f-7991-44d5-8bb6-f99584fb55de" />
+
+</br>
+</br>
+
+**4) 입력/출력 창 지정**
+- 버튼들 더블클릭 후에 속성 설정 가능
+    
+<img width="480" height="275" alt="image" src="https://github.com/user-attachments/assets/dbdf677f-5ac3-4850-9cfd-2421f88c17f6" />
+</br>
+</br>
+
+- input 값에 required 선택 시 필수값 지정
+  
+<img width="375" height="252" alt="image" src="https://github.com/user-attachments/assets/ff465ba0-48ca-4e44-ad5e-501a273f02b1" />
+
+- input 선택 해제 시 output 용으로 변경
+
+<img width="424" height="252" alt="image" src="https://github.com/user-attachments/assets/c20a3b8f-6c12-4dc6-8cec-d986c5ea9be8" />
+
+</br>
+</br>
+
+**5) OK_CODE 필드 추가**
+
+<img width="607" height="291" alt="image" src="https://github.com/user-attachments/assets/97490f68-9502-4821-bc60-4263172db93e" />
+
+</br>
+</br>
+
 ---
 
 </br>
