Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -139,7 +139,12 @@
 </br>
 </br>
 
-### < 스크린 파일 내 PBO, PAI 모듈 생성 >
+---
+
+</br>
+
+## < 스크린 파일 내 PBO, PAI 모듈 생성 >
+- 스크린 필드명과 ABAP 프로그램의 필드명을 동일하게 해야 연결됨.
 </br>
 
 **1) 스크린 파일 열기** 
