Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -52,6 +52,8 @@
     - 사용자가 버튼/엔터 입력 → OK-CODE 생성
     - 이 값이 `sy-ucomm` 에 들어옴
     - PAI에서 `CASE sy-ucomm` 으로 분기 처리
+- 시스템 변수 'sy-dynnr' : 현재 실행 중인 스크린 번호를 알려줌
+
 </br>
 </br>
 
@@ -210,10 +212,56 @@
 
 </br>
 
-## < ABAP ↔ 스크린 코드 예제 >
+## < ABAP ↔ 스크린 코드 모음 >
+- **가장 중요한 점 : TCODE 생성**
 </br>
 
-### < DB 테이블에서 입력값 가져오기 >
+### 1) ABAP 프로그램에서 구조 선언
+
+- 무조건 구조체로만 생성
+- OK_CODE 추가 필수. 타입은 반드시 `SY-UCOMM`
+```abap
+TABLES: sdyn_conn, scarr.
+DATA OK_CODE TYPE sy-ucomm.
+```
+</br>
+</br>
+
+### 2) 스크린에서도 같은 이름을 사용 / OK_CODE 추가 필수
+
+- 이름이 동일하면 자동으로 ABAP 변수와 값이 동기화됨
+- PBO/PAI에서 MOVE 구문 필요 없음
+```abap
+SDYN_CONN-CARRID
+SDYN_CONN-CONNID
+OK_CODE
+```
+</br>
+</br>
+
+### 3) sy-dynnr (현재 스크린 번호)
+- 현재 실행 중인 스크린 번호를 알려줌
+```abap
+sy-dynnr
+```
+</br>
+</br>
+
+### 4) 뒤로가기 (Back) 처리
+- next screen 을 0으로 주면 뒤로가기(back) 기능 수행
+- PAI에서 엔터/버튼 후 해당 구문 실행 시 이전 화면으로 돌아감
+```abap
+LEAVE TO SCREEN 0.
+```
+
+</br>
+</br>
+</br>
+
+---
+</br>
+
+## < ABAP ↔ 스크린 코드 예제 >
 </br>
 
 **1) 상단 두번째 그림 클릭 시 DB 테이블 목록을 선택 가능**
