Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -327,3 +327,9 @@ LEAVE TO SCREEN 0.
 
 ## < 실습 코드 >
 ### 실습 1
+
+**1) 인풋 3개 필수값으로 지정**
+
+<img width="620" height="386" alt="image" src="https://github.com/user-attachments/assets/a3a604f3-eba2-4c67-bfb1-cd29d0f82c66" />
+</br>
+</br>
