Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -256,7 +256,18 @@ LEAVE TO SCREEN 0.
 </br>
 </br>
 
-### 5) TCODE 생성 (TCODE를 생성해야 실행이 됨)
+### 5) 필드 초기화 (CLEAN)
+- 입력, 출력 필드 초기화 가능
+```abap
+MODULE clear_fields OUTPUT.
+  CLEAR INPUT01.
+  CLEAR OK_CODE.
+ENDMODULE.
+```
+</br>
+</br>
+
+### 6) TCODE 생성 (TCODE를 생성해야 실행이 됨)
 
 </br>
 </br>
@@ -333,3 +344,101 @@ LEAVE TO SCREEN 0.
 <img width="620" height="386" alt="image" src="https://github.com/user-attachments/assets/a3a604f3-eba2-4c67-bfb1-cd29d0f82c66" />
 </br>
 </br>
+
+**2) 스크린 파일 `element list`에서 `OK_CODE` 추가**
+<img width="623" height="349" alt="image" src="https://github.com/user-attachments/assets/95ea6ac0-944a-4048-9c8c-fc5e80964fa2" />
+</br>
+</br>
+
+**3) `TOP` 파일에 변수 선언**
+- tables 선언, OK_CODE 데이터로 선언 필수 
+```abap
+*&---------------------------------------------------------------------*
+*& Include MZBC410_SOLUTION_TOP                     - Module Pool      SAPMZBC410_SOLUTION_03
+*&---------------------------------------------------------------------*
+PROGRAM SAPMZBC410_SOLUTION_03.
+
+TABLES: SDYN_CONN.
+
+DATA: exit_button TYPE C,
+      OK_CODE TYPE SY-UCOMM,
+      gs_data TYPE SDYN_CONN,
+      gv_subrc TYPE sy-subrc.
+```
+</br>
+
+**4) 스크린 파일 코드에 PBO, PAI 모듈 추가**
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0100.
+*
+PROCESS AFTER INPUT.
+  MODULE CHECK_SFLIGHT.
+  MODULE USER_COMMAND_0100.
+```
+</br>
+
+**5) PAI 코드 추가**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZBC410_SOLUTION_I01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0100  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0100 INPUT.
+
+  IF exit_button = 'X'.
+    LEAVE TO SCREEN 0.
+  ENDIF.
+
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+*&      Module  CHECK_SFLIGHT  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE check_sflight INPUT.
+
+  SELECT SINGLE * FROM sflight
+    INTO CORRESPONDING FIELDS OF gs_data
+    WHERE carrid = SDYN_CONN-carrid
+      AND connid = SDYN_CONN-connid
+      AND fldate = SDYN_CONN-fldate.
+
+  IF sy-subrc <> 0.
+    gv_subrc = 4.
+    message text-007 TYPE 'I'.
+  ENDIF.
+
+ENDMODULE.
+```
+</br>
+
+**6) PBO 코드 추가**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZBC410_SOLUTION_O01
+*&------------------------------------+---------------------------------*
+*&---------------------------------------------------------------------*
+*& Module STATUS_0100 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0100 OUTPUT.
+  IF gv_subrc <> 0.
+    CLEAR SDYN_CONN.
+    gv_subrc = 0.
+  ELSE.
+    MOVE-CORRESPONDING gs_data TO SDYN_CONN.
+  ENDIF.
+ENDMODULE.
+```
+</br>
+
+**7) TCODE 생성**
+
+<img width="542" height="382" alt="image" src="https://github.com/user-attachments/assets/c5ade457-68f6-4730-b72c-b83ea00b645b" />
