Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -318,14 +318,76 @@ ENDMODULE.
 </br>
 </br>
 
-**5) OK_CODE 필드 추가**
+**5) 스크린 파일 `element list`에 `OK_CODE` 필드 추가**
 
 <img width="652" height="313" alt="image" src="https://github.com/user-attachments/assets/f7d67885-0da2-40ee-9554-f42c5d4c2292" />
 
 </br>
 </br>
 
-**6) 입력 창 확인**
+**6) `TOP` 파일에 변수 선언**
+- tables 선언, OK_CODE 데이터로 선언 필수 
+```abap
+PROGRAM SAPMZMDPB03_001.
+
+TABLES: SDYN_CONN. " 스크린 안에 생성한
+                   " Table/Structure
+
+DATA: INPUT01 TYPE C, " 입출력 필드
+      OK_CODE TYPE SY-UCOMM. " OK_CODE
+```
+</br>
+
+**4) 스크린 파일 코드에 PBO, PAI 모듈 추가**
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0100.
+ MODULE CLEAR_FIELDS.
+
+PROCESS AFTER INPUT.
+ MODULE USER_COMMAND_0100.
+```
+</br>
+
+**5) PAI 코드 추가**
+```abap
+MODULE user_command_0100 INPUT.
+  CASE INPUT01.
+    WHEN 'X'.
+      SELECT SINGLE CARRID CONNID CITYFROM CITYTO
+        INTO CORRESPONDING FIELDS OF SDYN_CONN
+        FROM SPFLI
+        WHERE CARRID = SDYN_CONN-CARRID
+          AND CONNID = SDYN_CONN-CONNID.
+    WHEN 'E'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
+
+**6) PBO 코드 추가**
+```abap
+MODULE status_0100 OUTPUT.
+ SET PF-STATUS 'S100'. " Application 버튼들 등 설정
+ SET TITLEBAR 'T100'.
+ENDMODULE.
+
+MODULE clear_fields OUTPUT.
+  CLEAR INPUT01.
+  CLEAR OK_CODE.
+ENDMODULE.
+```
+</br>
+
+**7) TCODE 생성**
+
+<img width="559" height="392" alt="image" src="https://github.com/user-attachments/assets/a366e09f-45b7-4db3-9a08-b3904f732747" />
+</br>
+</br>
+
+**8) 결과 확인**
 
 <img width="652" height="331" alt="image" src="https://github.com/user-attachments/assets/a922ceab-571f-46c6-83c8-e620163e85c9" />
 
