Update 프로그래밍 전용 웹 스크린 개발(12.11).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.11).md
@@ -505,3 +505,15 @@ ENDMODULE.
 **7) TCODE 생성**
 
 <img width="542" height="382" alt="image" src="https://github.com/user-attachments/assets/c5ade457-68f6-4730-b72c-b83ea00b645b" />
+</br>
+</br>
+
+**8) 결과 확인**
+
+<img width="492" height="339" alt="image" src="https://github.com/user-attachments/assets/5e884687-7bb1-47af-a3b9-15f8b588d209" />
+</br>
+</br>
+</br>
+</br>
+
+### 실습 2
